# wearable_robot

./: .gitmodules  README.md
src/: .gitignore  gitignore
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/ros2_socketcan/lib/ros2_socketcan/: socket_can_receiver_node_exe  socket_can_sender_node_exe
src/install/ros2_socketcan/share/ros2_socketcan/: local_setup.sh  package.sh
src/log/: latest_build
src/wearable_robot_bringup/: CMakeLists.txt  package.xml
src/wearable_robot_bringup/launch/: bringup_actuator.launch.py  bringup_all.launch.py
src/wearable_robot_control/: CMakeLists.txt  package.xml
src/wearable_robot_control/config/: temperature_control_params.yaml  waist_support_params copy.yaml
src/wearable_robot_control/src/: actuator_control_node.cpp  can_transmitter_node.cpp  waist_actuator_control_node.cpp  waist_support_control_node.cpp
src/wearable_robot_data_processing/: CMakeLists.txt  package.xml
src/wearable_robot_data_processing/config/: displacement_calibration_params.yaml
src/wearable_robot_data_processing/launch/: data_processing.launch.py
src/wearable_robot_data_processing/src/: IMU_processing_node.cpp  can_data_processor.cpp  data_parser_node.cpp  displacement_processing_node.cpp
src/wearable_robot_interfaces/: CMakeLists.txt  package.xml
src/wearable_robot_interfaces/msg/: ActuatorCommand.msg  BackIntension.msg  CANDataFrame.msg  DisplacementData.msg  DisplacementRawData.msg  FanCommand.msg  IMUData.msg  IMUType.msg  TemperatureData.msg
src/wearable_robot_interfaces/srv/: EmergencyStop.srv  SetControlMode.srv  SetControlParams.srv
src/wearable_robot_rqt_plugins/: package.xml  plugin.xml  setup.cfg  setup.py
src/wearable_robot_rqt_plugins/resource/: actuator_control.ui  waist_control.ui
src/wearable_robot_rqt_plugins/wearable_robot_rqt_plugins/: __init__.py  actuator_control_plugin.py  waist_control_plugin.py
